# nu_plugin_nbt

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: from.rs  main.rs  tags.rs
