[package]
name = "nu_plugin_nbt"
description = "A NuShell plugin to work with Minecraft Java Edition NBT data"
authors = ["Bwc9876"]
version = "0.1.0"
edition = "2024"

[dependencies]
flate2 = { version = "1.1.9", features = ["zlib"] }
nu-plugin = "0.111.0"
nu-protocol = { version = "0.111.0", features = ["plugin"] }
serde = { version = "1.0.228", features = ["derive"] }
simdnbt = "0.9.0"
